--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.5.0"
   }
 }
