--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-typescript": "^7.22.15",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.5",
+    "approvals": "^6.2.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
